--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation 'org.greenrobot:eventbus:3.2.0'
+    implementation "androidx.cardview:cardview:1.0.0"
 
 
 }
