--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.preference:preference:1.1.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
 
 }
