--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.example.carsomeweatherapp"
+        applicationId "com.example.demoweatherapp"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
